--- a/demo/index.html
+++ b/demo/index.html
@@ -62,7 +62,7 @@
 
       <demo-snippet>
         <template>
-          <ods-inputtext cssClass="testClass">Hello World!</ods-inputtext>
+          <ods-inputtext value="test">Hello World!</ods-inputtext>
         </template>
       </demo-snippet>
 
