feat: render given error message

--- a/demo/index.html
+++ b/demo/index.html
@@ -66,6 +66,12 @@
         </template>
       </demo-snippet>
 
+      <demo-snippet>
+        <template>
+          <ods-inputtext value="test" error="Something went wrong">Hello World!</ods-inputtext>
+        </template>
+      </demo-snippet>
+
       <h2>Element &#60;ods-inputtext&#62;</h2>
 
       <pre><code>class OdsInputtext extends LitElement</code></pre>
