--- a/demo/index.html
+++ b/demo/index.html
@@ -62,13 +62,13 @@
 
       <demo-snippet>
         <template>
-          <ods-inputtext value="test" required>Hello World!</ods-inputtext>
+          <ods-inputtext value="test" label="First name" helptext="Enter your first name"></ods-inputtext>
         </template>
       </demo-snippet>
 
       <demo-snippet>
         <template>
-          <ods-inputtext value="test" error="Something went wrong">Hello World!</ods-inputtext>
+          <ods-inputtext value="test" error="Something went wrong"></ods-inputtext>
         </template>
       </demo-snippet>
 
