fix: make button not tabbable

--- a/demo/index.html
+++ b/demo/index.html
@@ -68,7 +68,7 @@
 
       <demo-snippet>
         <template>
-          <ods-inputtext value="test" error="Something went wrong"></ods-inputtext>
+          <ods-inputtext value="test" label="First name" helptext="Enter your first name" error="Not a real name"></ods-inputtext>
         </template>
       </demo-snippet>
 
