--- a/demo/index.html
+++ b/demo/index.html
@@ -62,13 +62,24 @@
 
       <demo-snippet>
         <template>
-          <ods-inputtext value="test" label="First name" helptext="Enter your first name"></ods-inputtext>
+          <ods-inputtext value="test" label="First name" helptext="Enter your first name" required></ods-inputtext>
         </template>
       </demo-snippet>
 
       <demo-snippet>
         <template>
-          <ods-inputtext value="test" label="First name" helptext="Enter your first name" error="Not a real name"></ods-inputtext>
+          <ods-inputtext value="test" label="First name" helptext="Enter your first name" error="Not a real name" required></ods-inputtext>
+        </template>
+      </demo-snippet>
+
+      <demo-snippet>
+        <template>
+          <ods-inputtext
+            value="test"
+            helptext="Enter your first name"
+            error="Not a real name"
+            required>
+          </ods-inputtext>
         </template>
       </demo-snippet>
 
