fix: complete validation

--- a/demo/index.html
+++ b/demo/index.html
@@ -62,7 +62,7 @@
 
       <demo-snippet>
         <template>
-          <ods-inputtext value="test" label="First name" helptext="Enter your first name" required></ods-inputtext>
+          <ods-inputtext label="First name" helptext="Enter your first name" required></ods-inputtext>
         </template>
       </demo-snippet>
 
