feat: add custom validation message and type

--- a/demo/index.html
+++ b/demo/index.html
@@ -62,13 +62,13 @@
 
       <demo-snippet>
         <template>
-          <ods-inputtext label="First name" helptext="Enter your first name" required></ods-inputtext>
+          <ods-inputtext type="email" label="First name" helptext="Enter your first name" required></ods-inputtext>
         </template>
       </demo-snippet>
 
       <demo-snippet>
         <template>
-          <ods-inputtext value="test" label="First name" helptext="Enter your first name" error="Not a real name" required></ods-inputtext>
+          <ods-inputtext type="color" value="test" label="First name" helptext="Enter your first name" error="Not a real name" required></ods-inputtext>
         </template>
       </demo-snippet>
 
