feat: add disabled prop

--- a/demo/index.html
+++ b/demo/index.html
@@ -62,7 +62,7 @@
 
       <demo-snippet>
         <template>
-          <ods-inputtext type="email" label="First name" helptext="Enter your first name" required></ods-inputtext>
+          <ods-inputtext disabled value="disabled" type="email" label="First name" helptext="Enter your first name" required></ods-inputtext>
         </template>
       </demo-snippet>
 
