fix: #23 issues with a11y voice over

--- a/demo/index.html
+++ b/demo/index.html
@@ -48,7 +48,7 @@
 
     <demo-snippet>
       <template>
-        <ods-inputtext-light type="email" label="Email address" helptext="Enter your email" required></ods-inputtext-light>
+        <ods-inputtext-light type="email" label="Email address" helptext="Please enter your email" required id="eamilTest01"></ods-inputtext-light>
       </template>
     </demo-snippet>
 
@@ -56,31 +56,31 @@
 
     <demo-snippet>
       <template>
-        <ods-inputtext label="First name" helptext="Enter your first name" required></ods-inputtext>
+        <ods-inputtext label="First name" helptext="Enter your first name" required id="firstNameTest01"></ods-inputtext>
       </template>
     </demo-snippet>
 
     <demo-snippet>
       <template>
-        <ods-inputtext value="Test" label="First name" helptext="Enter your first name" required></ods-inputtext>
+        <ods-inputtext value="Test" label="First name" helptext="Enter your first name" required id="firstNameTest02"></ods-inputtext>
       </template>
     </demo-snippet>
 
     <demo-snippet>
       <template>
-        <ods-inputtext type="email" value="dale@alaskaair.com" label="Email" helptext="Enter your email"></ods-inputtext>
+        <ods-inputtext type="email" value="dale@alaskaair.com" label="Email" helptext="Enter your email" id="emailTest02"></ods-inputtext>
       </template>
     </demo-snippet>
 
     <demo-snippet>
       <template>
-        <ods-inputtext value="Invalid input" helptext="Enter your first name" error="Not a real name" required></ods-inputtext>
+        <ods-inputtext value="Invalid input" helptext="Enter your first name" error="Not a real name" required id="invalidInputTest01"></ods-inputtext>
       </template>
     </demo-snippet>
 
     <demo-snippet>
       <template>
-        <ods-inputtext disabled value="disabled" type="email" label="First name" helptext="Enter your first name" required></ods-inputtext>
+        <ods-inputtext disabled value="disabled" type="email" label="First name" helptext="Enter your first name" required id="disabledEmailTest01"></ods-inputtext>
       </template>
     </demo-snippet>
 
