feat: add support for type password

--- a/demo/index.html
+++ b/demo/index.html
@@ -56,6 +56,18 @@
 
     <demo-snippet>
       <template>
+        <ods-inputtext type="password" label="Password" helptext="Please enter your password" required id="passwordTest01"></ods-inputtext>
+      </template>
+    </demo-snippet>
+
+    <demo-snippet>
+      <template>
+        <ods-inputtext type="password" label="Password" helptext="Please enter your password" required id="passwordTest02" error="what the hell are you thinking"></ods-inputtext>
+      </template>
+    </demo-snippet>
+
+    <demo-snippet>
+      <template>
         <ods-inputtext label="First name" helptext="Enter your first name" required id="firstNameTest01"></ods-inputtext>
       </template>
     </demo-snippet>
